Bug 791457 - MailNews calls synchronous nsIProtocolProxyService::Resolve which doesn't exist any more since Bug 769764 removed it. r=sid0 CLOSED TREE